Data dictionary implemented

--- a/notebooks/schizophrenia.ipynb
+++ b/notebooks/schizophrenia.ipynb
@@ -54,7 +54,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "previous_dir = None # Failsafe incase if directory does not start in notebook\n",
+    "previous_dir = None # Failsafe if directory does not start in notebook directory \n",
     "while not os.path.exists('README.md'):\n",
     "    current_dir = os.getcwd()\n",
     "\n",
@@ -694,8 +694,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 4.1.1 Decoding the Variables"
+    "### 4.1.1 Decoding the Categorical Variables"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "col_dict = {'Gender': {0: 'Female', 1: 'Male'},\n",
+    "            'Education_Level': {1: 'Primary', 2: 'Middle School', 3: 'High School', 4: 'University', 5: 'Postgraduate'},\n",
+    "            'Maritial_Status': {0: 'Single', 1: 'Married', 2: 'Divorced', 3: 'Widowed'},\n",
+    "            'Occupation': {0: 'Unemployed', 1: 'Employed', 2: 'Retired', 3: 'Student'},\n",
+    "            'Income_Level': {0: 'Low', 1: 'Medium', 2: 'High'},\n",
+    "            'Living_Area': {0: 'Rural', 1: 'Urban'},\n",
+    "            'Diagnosis': {0: 'Not Schizophrenic', 1: 'Schizophrenic'},\n",
+    "            'Family_History': {0: 'No', 1: 'Yes'},\n",
+    "            'Substance_use': {0: 'No', 1: 'Yes'},\n",
+    "            'Suicide_Attempt': {0: 'No', 1: 'Yes'},\n",
+    "            'Social_Support': {0: 'Low', 1: 'Medium', 2: 'High'},\n",
+    "            'Stress_factors': {0: 'Low', 1: 'Medium', 2: 'High'},\n",
+    "            'Medication_Adherence': {0: 'Poor', 1: 'Moderate', 2: 'Good'}}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
